test/fails/bad_tags/parameterized2.lgl
tag a is vec<2>;
tag p3<`t : vec<3>> is vec<2>;
tag p32<`t : vec<3>> is p3<a>; // must provide a vec2 argument to p3

void main() {
    print 1;
}